fix(users): truncate email with ellipsis below 1150px

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -169,12 +169,12 @@
 	.wp-list-table.users .column-user_login,
 	.wp-list-table.users .column-display_name {
 		width: 10%;
-		white-space: nowrap;
 	}
 
 	.wp-list-table.users .column-email {
 		width: 15%;
-		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.wp-list-table.users .column-sites {
